--- a/_includes/about/social.html
+++ b/_includes/about/social.html
@@ -1,6 +1,15 @@
-<a href="{{ include.url }}" target="_blank">
-  <svg class="tf-social">
-    <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#{{- include.name -}}"/>
-  </svg>
-  <span>{{ include.label }}</span>
-</a>
+{% if include.name == "email" %}
+  <a href="mailto:{{ include.label }}">
+    <svg class="tf-social">
+      <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#envelope"/>
+    </svg>
+    <span>{{ include.label }}</span>
+  </a>
+{% else %}
+  <a href="{{ include.url }}" target="_blank">
+    <svg class="tf-social">
+      <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#{{- include.name -}}"/>
+    </svg>
+    <span>{{ include.label }}</span>
+  </a>
+{% endif %}
