--- a/_includes/about/social.html
+++ b/_includes/about/social.html
@@ -1,1 +1,6 @@
-<a href="{{ include.url }}" target="_blank"> <svg class="tf-social"> <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#{{- include.name -}}"/> </svg> <span>{{ include.label }}</span> </a>
+<a href="{{ include.url }}"{% unless include.url contains 'mailto:' %} target="_blank"{% endunless %}>
+  <svg class="tf-social">
+    <use xlink:href="{{ '/img/bootstrap-icons.svg' | prepend: site.baseurl }}#{{ include.name }}"/>
+  </svg>
+  <span>{{ include.label }}</span>
+</a>
