--- a/_includes/about/about.html
+++ b/_includes/about/about.html
@@ -25,12 +25,11 @@
             </div>
           {% endif %}
 
-          {% if site.data.bio.basics.email %}
-            {% capture url %}mailto:{{ site.data.bio.basics.email }}{% endcapture %}
-            <div class="col text-center">
-              {% include about/social.html url=url name='envelope' %}
-            </div>
-          {% endif %}
+         {% if site.data.bio.basics.email %}
+  <div class="col text-center">
+    {% include about/social.html url="mailto:{{ site.data.bio.basics.email }}" name="envelope" label=site.data.bio.basics.email %}
+  </div>
+{% endif %}
 
           {% for profile in site.data.bio.basics.profiles %}
             {% capture url %}{{ profile.url }}{% endcapture %}
